--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a style="text-decoration: none;" href="./Copy_CHH_test/HTML/My-2.0.html">Copy_CHH_test</a></li>
             <li><a style="text-decoration: none;" href="./JunLeYi_v2.0/index.html">JunLeYi_v2</a></li>
+            <li><a style="text-decoration: none;" href="./GraduationDesign/index.html">GraduationDesign</a></li>
         </ul>
     </div>
 </body>
